feat: api social-credentials
