# docs/openapi.yaml
@@ -8,6 +8,8 @@ servers:
 paths:
   /posts:
     get:
+      tags:
+        - Posts
       summary: Get all posts
       description: Get all scheduled social media posts
       security:
@@ -15,6 +17,17 @@ paths:
       responses:
         '200':
           description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/post'
+                  message:
+                    type: string
         '400':
           description: Bad Request
         '401':
@@ -22,6 +35,8 @@ paths:
         '500':
           description: Internal Server Error
     post:
+      tags:
+        - Posts
       summary: Create a new post
       description: Schedule a social media post
       security:
@@ -31,37 +46,18 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                publicationTime:
-                  type: string
-                  format: date-time
-                socialPosts:
-                  type: array
-                  items:
-                    type: object
-                    properties:
-                      platform:
-                        type: string
-                      socialCredentialID:
-                        type: string
-                      metadata:
-                        type: object
-                        properties:
-                          type:
-                            type: string
-                          content:
-                            type: string
-                          assets:
-                            type: array
-                            items:
-                              type: object
-                              properties:
-                                type:
-                                  type: string
+              $ref: '#/components/schemas/createPostBody'
       responses:
         '201':
           description: Created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+
         '400':
           description: Bad Request
         '401':
@@ -73,3 +69,64 @@ components:
     bearerAuth:
       type: http
       scheme: bearer
+  schemas:
+    post:
+      type: object
+      properties:
+        id:
+          type: string
+        ownerID:
+          type: string
+        platform:
+          type: string
+        status:
+          type: string
+        credential:
+          type: object
+        metadata:
+          type: object
+          properties:
+            type:
+              type: string
+            content:
+              type: string
+            assets:
+              type: array
+              items:
+                type: object
+                properties:
+                  type:
+                    type: string
+                  url:
+                    type: string
+    createPostBody:
+      type: object
+      properties:
+        publicationTime:
+          type: string
+          format: date-time
+        socialPosts:
+          type: array
+          items:
+            type: object
+            properties:
+              platform:
+                type: string
+              socialCredentialID:
+                type: string
+              metadata:
+                type: object
+                properties:
+                  type:
+                    type: string
+                  content:
+                    type: string
+                  assets:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        type:
+                          type: string
+                        url:
+                          type: string
