# src/models/request/credential.request.ts
@@ -1,0 +1,17 @@
+export interface CreateCredentialRequestBody {
+  platform: string
+  socialId: string
+  credential: {
+    code: string
+    [key: string]: any
+  }
+  metadata: {
+    avatar_url: string
+    name: string
+    [key: string]: any
+  }
+}
+
+export interface GetCredentialRequestQuery {
+  platform?: string
+}
